maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:5: error: not found: value sommeAngle
	sommeAngle=sommeAngle+1
        ^Escaper:8: error: not found: value sommeAngle
		sommeAngle=sommeAngle-1
                ^Escaper:11: error: not found: value sommeAngle
			sommeAngle=sommeAngle-1
                        ^Escaper:14: error: not found: value sommeAngle
				sommeAngle=sommeAngle-1
                                ^Escaper:27: error: not found: value sommeAngle
var sommeAngle()=0
    ^Escaper:33: error: not found: value sommeAngle
	 while(sommeAngle!=0 && getDirection()!=Direction.NORD){
               ^